# nix-pipe-tools

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/agents/: cel-maintainer.md  memo-maintainer.md  new-tool.md  prv-maintainer.md  tap-maintainer.md
.claude/commands/: maintain-cel.md  maintain-has.md  maintain-memo.md  maintain-prv.md  maintain-tap.md  maintain-when.md  new-tool.md
.github/workflows/: ci.yml  release.yml
crates/cel/: Cargo.toml  README.md
crates/cel/src/: detect.rs  extract.rs  filter.rs  lib.rs  main.rs  output.rs  parse.rs  selector.rs
crates/cel/tests/: integration.rs
crates/has/: Cargo.toml  README.md
crates/has/src/: lib.rs  lsof.rs  main.rs  output.rs  procfs.rs  query.rs  types.rs
crates/has/tests/: integration.rs
crates/memo/: Cargo.toml  README.md
crates/memo/src/: cache.rs  exec.rs  gc.rs  hasher.rs  lib.rs  main.rs  replay.rs  stats.rs
crates/memo/tests/: integration.rs
crates/prv/: Cargo.toml  README.md
crates/prv/src/: config.rs  db.rs  graph.rs  lib.rs  main.rs  replay.rs  shell_hook.rs  trace_linux.rs  trace_macos.rs
crates/prv/tests/: integration.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: fileident.rs  hash.rs  human.rs  lib.rs
crates/tap/: Cargo.toml  README.md
crates/tap/src/: capture.rs  detect.rs  lib.rs  main.rs  passthrough.rs  query.rs  session.rs
crates/tap/tests/: integration.rs
crates/when/: Cargo.toml  README.md
crates/when/src/: expr.rs  format.rs  lib.rs  main.rs  parse.rs
crates/when/tests/: integration.rs
