[workspace]
members = [
    "crates/shared",
    "crates/memo",
    "crates/tap",
    "crates/prv",
    "crates/cel",
    "crates/when",
    "crates/has",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
nix = { version = "0.29", features = ["process", "signal", "fs", "poll"] }
tempfile = "3"
which = "7"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
unicode-width = "0.2"
shared = { path = "crates/shared" }
