[package]
name = "cel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cel"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
