[package]
name = "memo"
version.workspace = true
edition.workspace = true

[[bin]]
name = "memo"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
nix = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
fs2 = "0.4"
humantime = "2"

[dev-dependencies]
tempfile = "3"
