[package]
name = "prv"
version.workspace = true
edition.workspace = true

[[bin]]
name = "prv"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true }
which = { workspace = true }
comfy-table = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
petgraph = "0.7"
glob = "0.3"
anyhow = "1"
