[package]
name = "tap"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tap"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
comfy-table = { workspace = true }
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
